<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:app="http://schemas.android.com/apk/res-auto"
      >
 
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          app:showAsAction="always"
          android:actionViewClass="android.widget.SearchView"/>
    
    <!-- New -->
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          android:showAsAction="always" />
    
       <!-- Share card -->
   
    <item
      android:id="@+id/action_share"
      android:orderInCategory="100"
      android:icon="@drawable/ic_action_share"
      android:title="@string/action_share"
      android:showAsAction="ifRoom"/>
    
    
    <!-- Delete groups -->
    <item android:id="@+id/action_delete_groups"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/delete_groups"
          android:showAsAction="ifRoom" />
    
    
    
    
          
          <!--   --> 
          
          <!-- android:actionViewClass="android.support.v7.widget.SearchView" />  -->
     
    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
          android:icon="@drawable/ic_action_location_found"
          android:title="@string/action_location_found"
          android:showAsAction="never" />
    
         
    <!-- Help -->
    <item android:id="@+id/action_help"
          android:icon="@drawable/ic_action_help"
          android:title="@string/action_help"
        app:showAsAction="never"/>
     
    <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <!-- import cards -->
    <item android:id="@+id/action_import_cards"
          android:title="@string/action_import_cards"
          android:showAsAction="never" />
    
    <!-- Sort by -->
    <item android:id="@+id/action_sortby"
          android:icon="@drawable/ic_action_sort_by_size"
          android:title="@string/action_sortby"
          android:showAsAction="always"/>
</menu>

    