<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   
    <!-- Delete card -->
   <item
      android:id="@+id/action_delete"
      android:orderInCategory="100"
      android:icon="@drawable/ic_action_discard"
      android:title="@string/action_delete"
      android:showAsAction="always"/>
   
   <!-- Group card -->
   <item
      android:id="@+id/action_group"
      android:orderInCategory="100"
      android:icon="@drawable/ic_action_save"
      android:title="@string/action_group"
      android:showAsAction="always"/>
   
          <!-- Share card -->
   
    <item
      android:id="@+id/action_share"
      android:orderInCategory="100"
      android:icon="@drawable/ic_action_share"
      android:title="@string/action_share"
      android:showAsAction="ifRoom"/>
   
    
</menu>    


